# Pi-Calculator

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  shared_config.py
app/: app.py  models.py
app/routes/: health_route.py  pi_calculation_route.py
celery_worker/: tasks.py
