[project]
name = "fun-pi-calculator-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "flask>=3.1.2",
    "flask-restx>=1.3.0",
    "flower>=2.0.1",
    "gunicorn>=23.0.0",
    "redis>=6.4.0",
]
